--- a/vis.html
+++ b/vis.html
@@ -36,7 +36,7 @@
   </head>
   <body>
 
-    <script src="three.min.js"></script>
+    <script src="js/three.min.js"></script>
     <script src="js/stats.min.js"></script>
     <script src="js/dat.gui.min.js"></script>
     <script src="js/jshashtable-3.0.js"></script>
