Changed SidestepSequence (back to emphasize the actual side-stepping). Added CircleSequence.

--- a/vis.html
+++ b/vis.html
@@ -36,6 +36,7 @@
   </head>
   <body>
 
+    <script src="js/prelude-browser-min.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/stats.min.js"></script>
     <script src="js/dat.gui.min.js"></script>
