--- a/vis.html
+++ b/vis.html
@@ -27,9 +27,12 @@
 
       #renderArea {
         position: absolute;
-        top: 56px;
-        left: 0px;
-        width: 1024px; height: 576px; /*1280x720 * 0.8*/
+        bottom: -340px;
+        right: -245px;
+        /*width: 854px; height: 480px;*/
+        /*width: 1366px; height: 768px;*/
+        width: 1920px; height: 1080px;
+        /*width: 1024px; height: 576px; 1280x720 * 0.8
         /*width: 640px; height: 320px; 1280x720 * 0.5*/
       }
     </style>
